# zlib295

./: .gitignore  CMakeLists.txt  CVE_REDISCOVERY.md  README.md  project_rubric.txt  proposal.txt  report_guidelines.txt
ablation/: RESULTS_SUMMARY.md  parse_results.py  plot_results.py  run_ablation.sh
cve_harnesses/: build_and_run.sh  cve_2018_25032_fuzzer.c  cve_2022_37434_fuzzer.c  gen_seeds.py  test_cve2018.c  test_cve2018_v2.c
fuzz/: CMakeLists.txt  README.md  compress_fuzzer.c  deflate_roundtrip_fuzzer.c  generate_seed_corpus.sh  inflate_fuzzer.c  uncompress_fuzzer.c  zlib.dict
setup/: apply_setup.sh  zlib_fuzz.patch
